# zing

./: .gitignore  Cargo.toml  LICENSE  README.md
sys-zing-daemon/: Cargo.toml
sys-zing-daemon/src/: error.rs  lib.rs  main.rs  melody.rs
zing-cli/: Cargo.toml
zing-cli/src/: error.rs  lib.rs  main.rs
zing-protocol/: Cargo.toml
zing-protocol/src/: error.rs  lib.rs
