[package]
name = "zing-cli"
version = "0.1.0"
edition = "2024"
authors = ["Daxanius"]

[package.metadata.clippy]
lints = ["clippy::pedantic"]

[[bin]]
name = "zing"
path = "src/main.rs"

[dependencies]
zing-protocol = { path = "../zing-protocol" }
clap = { version = "4.5", features = ["derive"] }
humantime = "2.2"
